feat: Join requests (#15)
